z-index fixed

--- a/src/utils/css/movieList.css
+++ b/src/utils/css/movieList.css
@@ -5,6 +5,8 @@
   gap: 8px;
   max-width: 100%;
   flex-shrink: 0;
+  position: relative;
+  z-index: 2;
 }
 
 .movie_list_cards {
